refactor: Improve YAML formatting for clarity in environment.yaml

--- a/environment.yaml
+++ b/environment.yaml
@@ -1,31 +1,32 @@
 # Azure Deployment Environment カタログ定義
 name: "ACI Development Environment"
 version: "1.0.0"
+summary: "Azure Container Instances を使用した開発環境"
 description: "Azure Container Instances を使用した開発環境のカタログ"
 templatePath: main.bicep
 parameters:
-  - name: location
-    type: string
-    defaultValue: "eastus"
-    description: "リソースをデプロイする Azure リージョン"
+- name: location
+  type: string
+  defaultValue: "eastus"
+  description: "リソースをデプロイする Azure リージョン"
 
-  - name: containerGroupName
-    type: string
-    defaultValue: "myContainerGroup"
-    description: "コンテナグループの名前"
+- name: containerGroupName
+  type: string
+  defaultValue: "myContainerGroup"
+  description: "コンテナグループの名前"
 
-  - name: image
-    type: string
-    defaultValue: "mcr.microsoft.com/azuredocs/aci-helloworld"
-    description: "使用するコンテナイメージ"
+- name: image
+  type: string
+  defaultValue: "mcr.microsoft.com/azuredocs/aci-helloworld"
+  description: "使用するコンテナイメージ"
 
-  - name: cpuCores
-    type: int
-    defaultValue: 1
-    description: "コンテナに割り当てる CPU コア数"
+- name: cpuCores
+  type: int
+  defaultValue: 1
+  description: "コンテナに割り当てる CPU コア数"
 
-  - name: memoryInGb
-    type: int
-    defaultValue: 1
-    description: "コンテナに割り当てるメモリ量 (GB)"
+- name: memoryInGb
+  type: int
+  defaultValue: 1
+  description: "コンテナに割り当てるメモリ量 (GB)"
 runner: Bicep
